fix broken css animation parameters

--- a/assets/css/dogs-animation.css
+++ b/assets/css/dogs-animation.css
@@ -1,8 +1,8 @@
 /*Styling first dog from the source: https://codepen.io/davidkpiano/pen/kkpGWj*/
 
 .dog {
-    width: 120px;
-    height: 120px;
+    width: 110px;
+    height: 110px;
     z-index: 1;
     margin: 130px auto 35px auto;
 }
@@ -255,7 +255,7 @@
         transform: rotate(5deg);
     }
     12% {
-        transform: rotate(-5%);
+        transform: rotate(-5deg);
     }
 
     from,
@@ -645,7 +645,7 @@
     border-bottom-left-radius: 49% 100%;
     transform: rotate(-64deg);
     top: -1%;
-    border-top-left-radius: 0% -20%;
+    border-top-left-radius: 0% 20%;
     border-bottom-right-radius: 52% 0%;
     box-shadow: rgba(0, 0, 0, 0.1) 2px -6px 11px 1px;
 }
